# multi-hop-reasoning

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  visualize_kg.py  visualize_results.py
core/: __init__.py  dataset.py  eval.py  generate_comparison.py  infer.py  kg.py  mlx_sft.py  reward.py  rsft.py  unsloth_rsft.py  unsloth_sft.py
data/: eval.jsonl  kg.json  train.jsonl
data/runs/run_0001/: episodes.jsonl  episodes_rsft_eval.jsonl  meta.json  metrics.json
demo/: server.py
demo/web/: app.js  index.html  style.css
docs/: ai_agent_instructions.md  app.js  eli5.md  episodes.json  index.html  style.css
documentation/: knowledge-graph.md  research.txt  results.md  training-status.md
spec/: agent1-core.md  agent2-demo.md  agent3-video.md  reward.md  schemas.md
tests/: __init__.py  test_core.py
video/: capture_checklist.md  edit_notes.md  script.md  shotlist.md
